--- a/src/componentes/Banner/Banner.css
+++ b/src/componentes/Banner/Banner.css
@@ -1,9 +1,9 @@
 .banner {
     background-color: #6278f7;
     text-align: center;
-    width: 100%;
+    heigth: 550px;
 }
 
 .banner img {
-    max-width: 100%;
+    width: 100%;
 }
